# prost-dot-exe

./: Cargo.toml  README.md  build.rs
protos/: authz_for_osmosis.proto
protos-in-rust/: authz_for_osmosis.rs
src/: main.rs
