[package]
name = "prost-dot-exe"
description = "Turn protobuf files into Rust files that can do Cosmos Stargate messages. Helpful for Osmosis mainnet deployments using multisigs."
authors = [ "Mike Purvis @mikedotexe"]
version = "0.1.0"
build = "build.rs"

#[[bin]]
#name = "create"
#path = "src/main.rs"

[dependencies]
prost = "0.11.9"
prost-types = "0.11.9"
chrono = "0.4.26"
base64 = "0.21.2"
serde_json = "1.0.96"

[build-dependencies]
prost-build = "0.11.9"
